[package]
categories = ["game-development", "gui", "web-programming"]
description = "Allows using a subset of CSS to interact with Bevy ECS"
edition = "2021"
exclude = [".github/", "book"]
keywords = ["bevy", "css", "style", "theme", "ui"]
license = "MIT OR Apache-2.0"
name = "bevy_ecss"
readme = "README.md"
repository = "https://github.com/afonsolage/bevy_ecss"
version = "0.8.0-rc.1"

[features]
default = ["sass"]
sass = ["dep:grass"]

[dependencies]
bevy = { version = "0.14.0-rc.4", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
] }
cssparser = "0.33"
cssparser-color = "0.1"
grass = { version = "0.13.3", optional = true }
smallvec = { version = "1.11", features = ["const_generics", "serde", "union"] }
thiserror = "1.0.50"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
bevy = { version = "0.14.0-rc.4", features = [
    "bevy_asset",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "file_watcher",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
bevy = "0.14.0-rc.4"

[[example]]
name = "simple_ui"
path = "examples/simple_ui.rs"

[[example]]
name = "hot_reload"
path = "examples/hot_reload.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"

[[example]]
name = "theme"
path = "examples/theme.rs"

[[example]]
name = "alpha"
path = "examples/alpha.rs"

[[example]]
name = "interactive"
path = "examples/interactive.rs"
